--- a/aboutme.html
+++ b/aboutme.html
@@ -127,7 +127,7 @@
                   <div class ="about-paragraph">
                     I’m a recent Computer Science graduate from UC San Diego
                     with a fascination for thoughtful and innovative design. I 
-                    believe in crafting meaningful solutions that can help and 
+                    believe in crafting meaningful solutions that can help 
                     empower people to live more fulfilling lives. 
                     <br> <br>
                     I'm currently a UX designer in training and working on
