changed all fonts + colors

--- a/aboutme.html
+++ b/aboutme.html
@@ -24,6 +24,8 @@
       <link rel="preconnect" href="https://fonts.googleapis.com"> 
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +55,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> IL </a></h1>
+      <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -62,7 +64,7 @@
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="/#portfolio">Work</a></li>
           <li><a class="nav-link scrollto active" href="/#about">About</a></li>
-          <!-- <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li> -->
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
         </ul> 
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
@@ -128,22 +130,24 @@
                     I’m a recent Computer Science graduate from UC San Diego
                     with a fascination for thoughtful and innovative design. I 
                     believe in crafting meaningful solutions that can help 
-                    empower people to live more fulfilling lives. 
-                    <br> <br>
+                    empower people to live more fulfilling lives. <br>
+                  </div>
+                  <div class ="about-paragraph">
                     I'm currently a UX designer in training and working on
                     projects in product design and web development. Aside from
                     design, I'm a big animal lover and I like to stay active by 
                     running and exploring the outdoors. 
-                    <br> <br>
+                  </div>
+                  <div class ="about-paragraph">
                     I'm always excited to collaborate and build new experiences. 
                     If you’d like to work together, let’s get in touch!
                     <br> <br>
                   </div>
-                  <div class = "about-link"> 
+<!--                   <div class = "about-link"> 
                     You can view my full resume
                     <a class="cta-btn" href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" 
                     style="color:blue" target="_blank"><u>here</u></a>!
-                  </div>
+                  </div> -->
                 </div>
               </div>
           </section> <!-- End About Section -->
