changed cover home page

--- a/aboutme.html
+++ b/aboutme.html
@@ -185,7 +185,8 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#00000048;font-size:12px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <!-- <h1 style="color:#444444;font-size:14px;letter-spacing:0.5px;"<span> </span> <span> irenelue01@gmail.com </span></h1> -->
           </div>
         </div>
       </div>
