--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
-      <h1> Irene Lue </h1>
+      <h1> Hi, I'm Irene! </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
-      <h2> Recent Computer Science graduate from UC San Diego. <br>
-      User Experience designer based in Los Angeles, CA. </h2> 
+      <h2> I'm a recent Computer Science graduate from UC San Diego <br>
+      and designer creating digital experiences in Los Angeles, CA. </h2> 
       <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a> -->
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -248,6 +248,11 @@
             </div> -->
           </div> <!-- End: Proj 3-->
         </div>
+      </div>
+      <div class="port-container">
+        <br>
+        
+
       </div>
     </section> <!-- End Portfolio Section -->
 
@@ -524,7 +529,7 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#00000048;font-size:12px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
           </div>
         </div>
       </div>
