--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -55,7 +55,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html"> IL </a></h1>
+      <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -329,7 +329,7 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#00000048;font-size:12px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
           </div>
         </div>
       </div>
