added you can email me here on bottom left

--- a/aboutme.html
+++ b/aboutme.html
@@ -141,6 +141,8 @@
                   <div class ="about-paragraph">
                     I'm always excited to collaborate and build new experiences. 
                     If you’d like to work together, let’s get in touch!
+                    <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
+                    style="color:blue" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a>
                     <br> <br>
                   </div>
 <!--                   <div class = "about-link"> 
