--- a/index.html
+++ b/index.html
@@ -248,12 +248,34 @@
             </div> -->
           </div> <!-- End: Proj 3-->
         </div>
-      </div>
-      <div class="port-container">
-        <br>
         
-
+        <!-- adding let's get in touch box -->
+        <div style="position: relative; width: 300px; font-size: 23px; margin-bottom:10px;">
+          <br> <br>          
+          I'd love to hear from you!
+          <br>
+        </div>
+        <div style="position: relative; width: 300px; font-size: 18px;">
+          You can email me
+          <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
+          style="color:blue" target="_blank" title="irenelue01@gmail.com"> <u>here</u></a>! 👀
+          <!-- <a href="mailto: irenelue01@gmail.com" style="color:blue" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
+          <br>
+        </div>
       </div>
+<!--       <div class="LGIT">
+        <div class="lgit-container">
+          <br>
+          <h1> hello </h1>
+          <br>
+        </div>
+      </div> -->
+      <section id="lgit">
+        <div class="lgit-container">
+          <br>
+          <h1> Let's get in touch! </h1>
+        </div>
+      </section>
     </section> <!-- End Portfolio Section -->
 
     <!-- ======= About Section ======= -->
@@ -530,6 +552,7 @@
         <div class="me-md-auto text-center">
           <div class="copyright">
             <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+
           </div>
         </div>
       </div>
