added resume links and designed + developed by irene lue

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <div style="position: relative; width: 300px; font-size: 18px;">
           You can email me
           <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
-          style="color:blue" target="_blank" title="irenelue01@gmail.com"> <u>here</u></a>! 👀
+          style="color:blue" target="_blank" title="irenelue01@gmail.com"> <u>here</u></a>. 👀
           <!-- <a href="mailto: irenelue01@gmail.com" style="color:blue" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
           <br>
         </div>
@@ -551,8 +551,8 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
-
+            <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1> -->
+            <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1>
           </div>
         </div>
       </div>
