added that weird white bar at the top

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
-      <h1> Hi, I'm Irene! </h1>
+      <h1> Hi, I'm Irene!👋 </h1>
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
       <h2> I'm a recent Computer Science graduate from UC San Diego <br>
       and designer creating digital experiences in Los Angeles, CA. </h2> 
