--- a/aboutme.html
+++ b/aboutme.html
@@ -123,7 +123,7 @@
                 <div class="col-lg-5 mx-auto"> 
                   <div class="about-title">
                     <!-- <p style="font-size:200%"> -->
-                      Hi, I'm Irene! 👋
+                      Nice to meet you! 👋
                     <!-- <p> -->
                   </div>
                   <div class ="about-paragraph">
@@ -142,7 +142,7 @@
                     I'm always excited to collaborate and build new experiences. 
                     If you’d like to work together, let’s get in touch!
                     <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
-                    style="color:blue" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a>
+                    style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a>
                     <br> <br>
                   </div>
 <!--                   <div class = "about-link"> 
@@ -173,10 +173,10 @@
         <div class="section-contact-port">
           <div class="me-md-auto text-center">
             <div class="email">
-              <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
-              <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+              <!-- <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
               <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
-              <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fas fa-basketball-ball"></i></a> -->
+              <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a>
               <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
               <!-- <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> -->
