--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <!-- <h2> Recent Computer Science graduate from UC San Diego based in LA. </h2> -->
       <h2> I'm a recent Computer Science graduate from UC San Diego <br>
       and designer creating digital experiences in Los Angeles, CA. </h2> 
-      <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a> -->
-      </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+      <!-- <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none;" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow"> Time in Los Angeles</a>
+      </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script> -->
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
     </div>
   </section><!-- End Hero -->
@@ -250,32 +250,18 @@
         </div>
         
         <!-- adding let's get in touch box -->
-        <div style="position: relative; width: 300px; font-size: 23px; margin-bottom:10px;">
-          <br> <br>          
+        <div style="position: relative; width: 300px; font-size: 20px; margin-bottom:10px;">
+          <br> <br> <br>        
           I'd love to hear from you!
           <br>
         </div>
-        <div style="position: relative; width: 300px; font-size: 18px;">
-          You can email me
+        <div style="position: relative; width: 300px; font-size: 16px;">
           <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
-          style="color:blue" target="_blank" title="irenelue01@gmail.com"> <u>here</u></a>. 👀
+          style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>irenelue01@gmail.com</u></a>
           <!-- <a href="mailto: irenelue01@gmail.com" style="color:blue" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
           <br>
         </div>
       </div>
-<!--       <div class="LGIT">
-        <div class="lgit-container">
-          <br>
-          <h1> hello </h1>
-          <br>
-        </div>
-      </div> -->
-      <section id="lgit">
-        <div class="lgit-container">
-          <br>
-          <h1> Let's get in touch! </h1>
-        </div>
-      </section>
     </section> <!-- End Portfolio Section -->
 
     <!-- ======= About Section ======= -->
@@ -537,10 +523,10 @@
         <div class="section-contact-port">
           <div class="me-md-auto text-center">
             <div class="email">
-              <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
-              <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+              <!-- <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
               <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
-              <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fas fa-basketball-ball"></i></a> -->
+              <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a>
               <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
               <!-- <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> -->
