--- a/aboutme.html
+++ b/aboutme.html
@@ -149,9 +149,7 @@
                 <!-- ========== Added Instagram ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title">
-                    <!-- <p style="font-size:200%"> -->
-                      Instagram
-                    <!-- <p> -->
+                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> Instagram </a>
                   </div>
                   <div class="row">
                     <div class="column">
