finished instagram section for about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -168,7 +168,32 @@
                       <img src="assets/img/team/post5.jpg" alt="Mountains" style="width:100%">
                     </div>            
                   </div>
-                </div>
+                </div> <!-- end of instagram container -->
+
+                <!-- ========== Added Spotify ========== -->
+<!--                 <div class="instagram-container">
+                  <div class="instagram-title">
+                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> Instagram </a>
+                  </div>
+                  <div class="row">
+                    <div class="column">
+                      <img src="assets/img/team/post1.jpg" alt="Snow" style="width:100%">
+                    </div>
+                    <div class="column">
+                      <img src="assets/img/team/post2.jpg" alt="Forest" style="width:100%">
+                    </div>
+                    <div class="column">
+                      <img src="assets/img/team/post3.jpg" alt="Mountains" style="width:100%">
+                    </div>        
+                    <div class="column">
+                      <img src="assets/img/team/post4.jpg" alt="Mountains" style="width:100%">
+                    </div>
+                    <div class="column">
+                      <img src="assets/img/team/post5.jpg" alt="Mountains" style="width:100%">
+                    </div>            
+                  </div>
+                </div> --> <!-- end of spotify container -->
+
               </div>
           </section> <!-- End About Section -->
         </section> <!-- End Contact Section -->
