added instagram pics for about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -153,19 +153,19 @@
                   </div>
                   <div class="row">
                     <div class="column">
-                      <img src="assets/img/team/post1.jpg" alt="Snow" style="width:100%">
+                      <img src="assets/img/insta/post1.jpg" style="width:100%">
                     </div>
                     <div class="column">
-                      <img src="assets/img/team/post2.jpg" alt="Forest" style="width:100%">
+                      <img src="assets/img/insta/post2.jpg" style="width:100%">
                     </div>
                     <div class="column">
-                      <img src="assets/img/team/post3.jpg" alt="Mountains" style="width:100%">
+                      <img src="assets/img/insta/post3.jpg" style="width:100%">
                     </div>        
                     <div class="column">
-                      <img src="assets/img/team/post4.jpg" alt="Mountains" style="width:100%">
+                      <img src="assets/img/insta/post4.jpg" style="width:100%">
                     </div>
                     <div class="column">
-                      <img src="assets/img/team/post5.jpg" alt="Mountains" style="width:100%">
+                      <img src="assets/img/insta/post5.jpg" style="width:100%">
                     </div>            
                   </div>
                 </div> <!-- end of instagram container -->
