--- a/aboutme.html
+++ b/aboutme.html
@@ -117,7 +117,7 @@
                 <div class="col-lg-6 mx-auto"> 
                   <div class="about-title">
                     <!-- <p style="font-size:200%"> -->
-                      Nice to meet you! 👋
+                      Nice to meet you!
                     <!-- <p> -->
                   </div>
                   <div class ="about-paragraph">
@@ -153,47 +153,48 @@
                   </div>
                   <div class="row">
                     <div class="column">
-                      <img src="assets/img/insta/post1.jpg" style="width:100%">
+                      <a href="https://www.instagram.com/p/CZgd6uiLW6u/" target="blank">
+                        <img src="assets/img/insta/post1.jpg" style="width:100%">
+                      </a>
                     </div>
                     <div class="column">
-                      <img src="assets/img/insta/post2.jpg" style="width:100%">
+                      <a href="https://www.instagram.com/p/CYYXa_yralI/" target="blank">
+                        <img src="assets/img/insta/post2.jpg" style="width:100%">
+                      </a>
                     </div>
                     <div class="column">
-                      <img src="assets/img/insta/post3.jpg" style="width:100%">
-                    </div>        
+                      <a href="https://www.instagram.com/p/CQKL4pJlyqx/" target="blank">
+                        <img src="assets/img/insta/post4.jpg" style="width:100%">
+                      </a>
+                    </div>      
                     <div class="column">
-                      <img src="assets/img/insta/post4.jpg" style="width:100%">
+                      <a href="https://www.instagram.com/p/BQ9aYSyhbqM/" target="blank">
+                        <img src="assets/img/insta/creek.jpg" style="width:100%">
+                      </a>
                     </div>
                     <div class="column">
-                      <img src="assets/img/insta/post5.jpg" style="width:100%">
+                      <a href="https://www.instagram.com/p/BPJB8NdA20j/" target="blank">
+                        <img src="assets/img/insta/post5.jpg" style="width:100%">
+                      </a>
                     </div>            
                   </div>
                 </div> <!-- end of instagram container -->
 
                 <!-- ========== Added Spotify ========== -->
-<!--                 <div class="instagram-container">
+                <div class="instagram-container">
                   <div class="instagram-title">
-                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> Instagram </a>
+                    <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> What I've been listening to </a>
                   </div>
-                  <div class="row">
-                    <div class="column">
-                      <img src="assets/img/team/post1.jpg" alt="Snow" style="width:100%">
-                    </div>
-                    <div class="column">
-                      <img src="assets/img/team/post2.jpg" alt="Forest" style="width:100%">
-                    </div>
-                    <div class="column">
-                      <img src="assets/img/team/post3.jpg" alt="Mountains" style="width:100%">
-                    </div>        
-                    <div class="column">
-                      <img src="assets/img/team/post4.jpg" alt="Mountains" style="width:100%">
-                    </div>
-                    <div class="column">
-                      <img src="assets/img/team/post5.jpg" alt="Mountains" style="width:100%">
-                    </div>            
+                  <div class="spotify-container">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                   </div>
-                </div> --> <!-- end of spotify container -->
-
+                  <div class="spotify-container2">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6yhVhbiH2ZMLSZX4alM4n4?utm_source=generator" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                
+                  </div>
+                  <div class="spotify-container3">
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
+                  </div>
+                <!-- end of spotify container -->
               </div>
           </section> <!-- End About Section -->
         </section> <!-- End Contact Section -->
@@ -220,10 +221,10 @@
               <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
               <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a>
+              <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
               <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a>
               <a href="https://www.behance.net/irene_lue" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
-              <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
-              <!-- <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> -->
               <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
             </div>
           </div>
