resized spotify sections

--- a/aboutme.html
+++ b/aboutme.html
@@ -149,7 +149,7 @@
                 <!-- ========== Added Instagram ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title">
-                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> Instagram </a>
+                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> Instagram @irenelue </a>
                   </div>
                   <div class="row">
                     <div class="column">
@@ -169,7 +169,7 @@
                     </div>      
                     <div class="column">
                       <a href="https://www.instagram.com/p/BQ9aYSyhbqM/" target="blank">
-                        <img src="assets/img/insta/creek.jpg" style="width:100%">
+                        <img src="assets/img/insta/taiwan.jpg" style="width:100%">
                       </a>
                     </div>
                     <div class="column">
@@ -186,15 +186,15 @@
                     <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> What I've been listening to </a>
                   </div>
                   <div class="spotify-container">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                   </div>
                   <div class="spotify-container2">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6yhVhbiH2ZMLSZX4alM4n4?utm_source=generator" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6yhVhbiH2ZMLSZX4alM4n4?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>                
                   </div>
                   <div class="spotify-container3">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
                   </div>
-                <!-- end of spotify container -->
+                 <!-- end of spotify container -->
               </div>
           </section> <!-- End About Section -->
         </section> <!-- End Contact Section -->
