fixing pics not showing on about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -154,17 +154,17 @@
                   <div class="row">
                     <div class="column">
                       <a href="https://www.instagram.com/p/CZgd6uiLW6u/" target="blank">
-                        <img src="assets/img/insta/post1.jpg" style="width:100%">
+                        <img src="assets/img/insta/waikiki.jpg" style="width:100%">
                       </a>
                     </div>
                     <div class="column">
                       <a href="https://www.instagram.com/p/CYYXa_yralI/" target="blank">
-                        <img src="assets/img/insta/post2.jpg" style="width:100%">
+                        <img src="assets/img/insta/haleakala.jpg" style="width:100%">
                       </a>
                     </div>
                     <div class="column">
                       <a href="https://www.instagram.com/p/CQKL4pJlyqx/" target="blank">
-                        <img src="assets/img/insta/post4.jpg" style="width:100%">
+                        <img src="assets/img/insta/grad.jpg" style="width:100%">
                       </a>
                     </div>      
                     <div class="column">
