--- a/aboutme.html
+++ b/aboutme.html
@@ -149,7 +149,7 @@
                 <!-- ========== Added Instagram ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title">
-                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> Instagram @irenelue </a>
+                    <a href="http://instagram.com/irenelue" style="color:#1563b1" target="_blank" title="Instagram"> Instagram </a>
                   </div>
                   <div class="row">
                     <div class="column">
@@ -168,7 +168,7 @@
                       </a>
                     </div>      
                     <div class="column">
-                      <a href="https://www.instagram.com/p/BQ9aYSyhbqM/" target="blank">
+                      <a href="https://www.instagram.com/p/BJYBuEwA4Fj/" target="blank">
                         <img src="assets/img/insta/taiwan.jpg" style="width:100%">
                       </a>
                     </div>
@@ -183,7 +183,7 @@
                 <!-- ========== Added Spotify ========== -->
                 <div class="instagram-container">
                   <div class="instagram-title">
-                    <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> What I've been listening to </a>
+                    <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> Recently Played </a>
                   </div>
                   <div class="spotify-container">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
