--- a/aboutme.html
+++ b/aboutme.html
@@ -181,7 +181,7 @@
                 </div> <!-- end of instagram container -->
 
                 <!-- ========== Added Spotify ========== -->
-                <div class="instagram-container">
+<!--                 <div class="instagram-container">
                   <div class="instagram-title">
                     <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> Recently Played </a>
                   </div>
@@ -193,7 +193,7 @@
                   </div>
                   <div class="spotify-container3">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
-                  </div>
+                  </div> -->
                  <!-- end of spotify container -->
               </div>
           </section> <!-- End About Section -->
