changed descrip font on home page

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
         </div>
         
         <!-- adding let's get in touch box -->
-        <div style="position: relative; width: 300px; font-size: 20px; margin-bottom:10px;">
+        <div style="position: relative; width: 500px; font-size: 18px; margin-bottom:10px;">
           <br> <br> <br>        
-          I'd love to hear from you!
+          Have any questions? I'd love to hear from you!
           <br>
         </div>
         <div style="position: relative; width: 300px; font-size: 16px;">
