need to work on case studies

--- a/aboutme.html
+++ b/aboutme.html
@@ -134,7 +134,7 @@
                   </div>
                   <div class ="about-paragraph">
                     I'm always excited to collaborate and build new experiences. 
-                    If you’d like to work together, let’s get in touch!
+                    If you’d like to work together or have any questions, let’s get in touch!
                     <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
                     style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a>
                     <br> <br>
@@ -181,9 +181,9 @@
                 </div> <!-- end of instagram container -->
 
                 <!-- ========== Added Spotify ========== -->
-<!--                 <div class="instagram-container">
+                <div class="instagram-container">
                   <div class="instagram-title">
-                    <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> Recently Played </a>
+                    <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> Things I've been playing recently </a>
                   </div>
                   <div class="spotify-container">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0riyEjwFO7vIR8hhvyk700?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
@@ -193,8 +193,8 @@
                   </div>
                   <div class="spotify-container3">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
-                  </div> -->
-                 <!-- end of spotify container -->
+                </div>
+                 <!-- end of spotify container 
               </div>
           </section> <!-- End About Section -->
         </section> <!-- End Contact Section -->
