--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <!-- adding let's get in touch box -->
         <div style="position: relative; width: 500px; font-size: 18px; margin-bottom:10px;">
           <br> <br> <br>        
-          Have any questions? I'd love to hear from you!
+          Let's get in touch, I'd love to hear from you!
           <br>
         </div>
         <div style="position: relative; width: 300px; font-size: 16px;">
