just changed visual things nbd

--- a/aboutme.html
+++ b/aboutme.html
@@ -134,10 +134,17 @@
                   </div>
                   <div class ="about-paragraph">
                     I'm always excited to collaborate and build new experiences. 
-                    If you’d like to work together or have any questions, let’s get in touch!
-                    <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
-                    style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a>
+                    Feel free to send me an email or connect with me on my social media platforms!
+                    <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
+                    style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> <u>✉️</u></a> -->
                     <br> <br>
+                    <a href="mailto: irenelue01@gmail.com" style="font-size: 20px" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
+                    <a href="https://www.linkedin.com/in/irenelue/" style="font-size: 20px" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/irenelue" style="font-size: 20px" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
+                    <a href="https://www.instagram.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.twitter.com/irenelue/" style="font-size: 20px" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
+                    <a href="https://www.behance.net/irene_lue" style="font-size: 20px" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
+
                   </div>
                   <!-- <div class = "about-link"> 
                     You can view my full resume
@@ -181,7 +188,7 @@
                 </div> <!-- end of instagram container -->
 
                 <!-- ========== Added Spotify ========== -->
-                <div class="instagram-container">
+<!--                 <div class="instagram-container">
                   <div class="instagram-title">
                     <a href="https://open.spotify.com/user/lueirene" style="color:#1563b1" target="_blank" title="Instagram"> Things I've been playing recently </a>
                   </div>
@@ -193,7 +200,7 @@
                   </div>
                   <div class="spotify-container3">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
-                </div>
+                </div> -->
                  <!-- end of spotify container 
               </div>
           </section> <!-- End About Section -->
@@ -223,7 +230,7 @@
               <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
               <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
-              <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a>
+              <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a> -->
               <a href="https://www.behance.net/irene_lue" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a>
               <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
             </div>
@@ -232,8 +239,8 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1> -->
-            <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1>
+            <h1 style="color:#4e4e4e;font-size:15px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+            <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
           </div>
         </div>
       </div>
