removed 'Home' on home page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
           <li><a class="nav-link scrollto" href="#portfolio">Work</a></li>
           <li><a href="aboutme.html">About</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
@@ -247,11 +247,9 @@
         <!-- ======= OPTION 1 ======= -->
         <!-- adding let's get in touch box -->
         <div style="position: relative; width: 500px; font-size: 20px; margin-bottom:10px; margin-top:100px;">
-          <br> <br> <br>        
-          Let's get in touch!
-          <br>
+          <br> <br> <br> Anything catch your eye? Let's get in touch! <br>
         </div>
-        <div style="position: relative; width: 300px; font-size: 16px; margin-bottom:20px; letter-spacing: 1px;">
+        <div style="position: relative; width: 500px; font-size: 18px; margin-bottom:20px; letter-spacing: 1px;">
           <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
           style="color:#1563b1" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>
           <!-- <a href="mailto: irenelue01@gmail.com" style="color:blue" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
