--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -61,7 +61,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+          <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
           <li><a class="nav-link scrollto active" href="/#portfolio">Work</a></li>
           <li><a class="nav-link scrollto" href="/#about">About</a></li>
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
@@ -92,18 +92,15 @@
   </header><!-- End Header -->
 
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <!-- <ol>
           <li><a href="index.html" class="class1">Home</a></li>
           <li>COVID-Code</li>
           <!-- add on RHS corner: Read Next: ...
         </ol> -->
         <!-- <h2>Portfolio Details</h2> -->
-
       </div>
     </section> <!-- End Breadcrumbs -->
 
@@ -246,10 +243,9 @@
                 <a href="portfolio-details2.html" style="color:#4e4e4e" target="_blank" title="Next project"> <u>Next</u></a>
                 <br>
               </div>
-
             <!-- </div> --> 
 
-            <div class="blog-comments">
+            <!-- <div class="blog-comments">
               <!-- replace below with the 'read next: ...' -->
               <!-- start of reply form --> 
               <!-- <div class="reply-form">
